# icalingua-bridge-bot

./: .gitignore  Cargo.toml  news.md  readme.md
ica-rs/: Cargo.toml
ica-rs/src/: config.rs  error.rs  ica.rs  main.rs  status.rs  tailchat.rs  wasms.rs
ica-rs/src/data_struct/: ica.rs  mod.rs  tailchat.rs
ica-rs/src/data_struct/ica/: all_rooms.rs  files.rs  group_members.rs  messages.rs  online_data.rs
ica-rs/src/data_struct/ica/messages/: msg_trait.rs  raw.rs
ica-rs/src/data_struct/ica/messages/raw/: node_types.rs
ica-rs/src/data_struct/tailchat/: api.rs  messages.rs  status.rs
ica-rs/src/ica/: client.rs  events.rs
ica-rs/src/py/: call.rs  class.rs  config.rs  consts.rs  init.rs  mod.rs  plugin.rs  storage.rs
ica-rs/src/py/class/: commander.rs  config.rs  define.rs  ica.rs  manifest.rs  mod.rs  schdule.rs  schedule.rs  tailchat.rs
ica-rs/src/tailchat/: client.rs  events.rs
news/: 0-9.md  olds.md
