[package]
name = "ica-rs"
version = "0.9.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ica", "tailchat"]
ica = [
    "dep:ed25519",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:rust_socketio",
    "dep:base64",
    "dep:reqwest",
]
tailchat = ["dep:rust_socketio", "dep:md-5", "dep:reqwest"]

[dependencies]

# ica
base64 = { version = "0.22", optional = true }
ed25519 = { version = "2.2", optional = true }
ed25519-dalek = { version = "2.2", optional = true }
hex = { version = "0.4", optional = true }

# tailchat
reqwest = { version = "0.13.2", optional = true, default-features = false, features = ["multipart", "json", "rustls"] }
md-5 = { version = "0.11.0", optional = true }

# ica & tailchat (socketio)
rust_socketio = { version = "0.6.0", features = ["async", "rustls-tls-native-roots"], default-features = false, optional = true }

# data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
toml = "1.1.2"
toml_edit = "0.25.11"
colored = "3.1.1"
foldhash = "0.2"
blake3 = "1.8.4"

# runtime
tokio = { version = "1.51.1", features = ["rt-multi-thread", "time", "signal", "macros"] }
futures-util = "0.3.32"
pyo3 = { version = "0.28.3", features = ["experimental-async", "anyhow"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
# async 这玩意以后在搞
# pyo3-async = "0.3.2"
# pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["time"] }
